--- a/CV-Application/src/style.css
+++ b/CV-Application/src/style.css
@@ -74,8 +74,12 @@
     padding: 20px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
     background-color: #f9f9f9;
-    height:100vh;
-    
+    height:80vh;
+    margin:10px;
+    display: flex;
+    flex-direction: column;
+    gap:30px;
+    width:50vw; 
   }
   
   /* Scrollbar styling */
@@ -92,3 +96,51 @@
     background: transparent;
   }
   
+
+  .section-1{
+    text-align: center;
+  }
+
+
+  .sub{
+    display: flex;
+    font-size:.8rem;
+    gap:2px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .section-2{
+    
+  }
+
+  .sub2{
+    display: flex;
+    gap:10px;
+  }
+
+  .mini{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .mini .sub2:nth-child(2){
+    display: flex;
+    flex-direction: column;
+    gap:0;
+  }
+
+  .date{
+    display: flex;
+    gap:8px;
+  }
+
+  .loc{
+    display: flex;
+    gap:8px;
+  }
+
+
+  .description{
+    padding-top:10px;
+  }
